--- a/MySqlDotnetCore/appsettings.json
+++ b/MySqlDotnetCore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"server=localhost;userid=myusername;password=mypassword;database=mydatabase;"
+    "DefaultConnection":"server=localhost;userid=root;password=1234;database=mydatabase;"
   },
   "Logging": {
     "LogLevel": {
